[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.6.0"
aws-config = "1.3.0"
aws-sdk-cloudwatch = "1.26.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
prometheus = "0.13.3"
serde = { version = "1.0.188", features = ['derive']}
serde_json = "1.0.105"
tokio = "1.32.0"
yaml-rust = "0.4.5"
futures-util = "0.3.30"
actix-service = "2.0.2"
